# FractalStream

./: .gitignore  .gitmodules  FractalStream.cabal  FractalStream.cabal~  LICENSE  NOTES.org  README.md  Setup.hs  about.html  archive.html  basic_julia.yaml  basic_mandelbrot.yaml  circle.yml  contact.html  index.html  mandelbrain.yaml  mandelbrot.yaml  newton.yaml  newton3.yaml  params.json  stack.yaml  twisted_mandelbrot.yaml  twisted_rabbit.yaml  wiz0.yaml  wiz0c.yaml
.github/workflows/: haskell.yml  linux.yml  macos.yml
_site/: archive.html  contact.html  index.html
_site/posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html
css/: default.css
exe/: Main.hs
exe/UI/: Tile.hs  WxWidgets.hs
exe/UI/WX/: Viewer.hs
fractalstream-backend-llvm/: fractalstream-backend-llvm.cabal  stack.yaml
fractalstream-backend-llvm/src/Backend/: LLVM.hs
fractalstream-backend-llvm/src/Backend/LLVM/: Code.hs  Operand.hs  Value.hs
fractalstream-backend-llvm/test/Backend/: LLVMSpec.hs
fractalstream-core/: .gitignore  fractalstream-core.cabal  stack.yaml
fractalstream-core/src/: Actor.hs  Backend.hs  Event.hs  Library.hs  Project.hs  UI.hs
fractalstream-core/src/Actor/: Configuration.hs  Ensemble.hs  Event.hs  Layout.hs  Settings.hs  Tool.hs  UI.hs  Viewer.hs
fractalstream-core/src/Actor/Viewer/: Complex.hs
fractalstream-core/src/Color/: Color.hs
fractalstream-core/src/Data/: Color.hs  DynamicValue.hs  Planar.hs  Recursive.hs
fractalstream-core/src/Data/Indexed/: Functor.hs
fractalstream-core/src/Exec/: Haskell.hs
fractalstream-core/src/Exec/Tasking/: Block.hs
fractalstream-core/src/FractalStream/: Models.hs
fractalstream-core/src/Helper/: GC.hs  UnionFind.hs
fractalstream-core/src/Lang/: Component.hs  Expr.hs  Numbers.hs  Planar.hs
fractalstream-core/src/Lang/Expr/: Typing.hs
fractalstream-core/src/Lang/Parse/: Expr.hs  Numbers.hs
fractalstream-core/src/Language/: Code.hs  Effect.hs  Environment.hs  Parser.hs  Template.hs  Type.hs  Untyped.hs  Value.hs
fractalstream-core/src/Language/Code/: InterpretIO.hs  Parser.hs  Simulator.hs
fractalstream-core/src/Language/Effect/: Draw.hs  Event.hs  List.hs  Output.hs  Provide.hs  Render.hs  ThrowEvent.hs
fractalstream-core/src/Language/Untyped/: Code.hs  Constraints.hs  Evaluator.hs  Infer.hs  Shape.hs  Type.hs  Value.hs
fractalstream-core/src/Language/Value/: Evaluator.hs  Parser.hs  Transform.hs  Weaken.hs
fractalstream-core/src/Task/: Block.hs  Concurrent.hs
fractalstream-core/src/Template/Complex/: Parametric.hs
fractalstream-core/src/Utils/: Concurrent.hs
fractalstream-core/test/Data/Indexed/: FunctorSpec.hs
fractalstream-core/test/Language/Code/: ParserSpec.hs
fractalstream-core/test/Language/Effect/: ListSpec.hs
fractalstream-core/test/Language/Untyped/: CodeSpec.hs  ShapeSpec.hs
fractalstream-core/test/Language/Value/: EvaluatorSpec.hs  ParserSpec.hs
fractalstream-ui-wx/: .gitignore  FS.icns  Setup.hs  fractalstream-ui-wx.cabal  stack.yaml  stack.yaml.macos  stack.yaml.ubuntu
fractalstream-ui-wx/src/: Main.hs
fractalstream-ui-wx/src/UI/: CodeEditor.hs  Definition.hs  Tile.hs  WxWidgets.hs
fractalstream-ui-wx/src/UI/WX/: Viewer.hs
posts/: 2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html  2015-09-09-fractalstream-1.0.html  2015-09-10-why-haskell.html
src/: Actor.hs  Event.hs  Main.hs  UI.hs  Utilities.hs
src/Actor/: Settings.hs  Tool.hs  Viewer.hs
src/Color/: Color.hs  Colorize.hs
src/Data/Indexed/: Functor.hs
src/Exec/: Accelerate.hs  Haskell.hs  LLVM.hs  Placeholder.hs  Region.hs
src/Exec/Tasking/: Block.hs  Manager.hs
src/Lang/: Expr.hs  Numbers.hs  Planar.hs
src/Lang/Expr/: Print.hs  Transform.hs  Typing.hs
src/Lang/Parse/: Expr.hs
src/Language/: Code.hs  Effect.hs  Environment.hs  Type.hs  Value.hs
src/Language/Code/: Simulator.hs
src/Language/Effect/: Render.hs  ThrowEvent.hs
src/Language/Value/: Evaluator.hs  Parser.hs
src/UI/: Tile.hs
src/UI/Gloss/: Viewer.hs
src/UI/WX/: Viewer.hs
src/Utils/: Concurrent.hs
templates/: default.html
test/Data/Indexed/: FunctorSpec.hs
test/Language/Code/: ParserSpec.hs
test/Language/Value/: ParserSpec.hs
