cabal-version:       3.0
name:                FractalStream
version:             2.0.0.0
synopsis:            Tool for dynamical systems research.
description:         Dynamical system visualization
license:             BSD-3-Clause
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           2021, Matt Noonan
category:            Math
build-type:          Simple

common FractalStream-common
  ghc-options:         -Wall -Werror -O2
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DerivingStrategies
                     , EmptyCase
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
  default-language:    Haskell2010

library
  import: FractalStream-common
  exposed-modules:     Color.Color
                       Color.Colorize
                       Exec.LLVM
                       Exec.Haskell
                       Exec.Placeholder
                       Exec.Region
                       Exec.Tasking.Block
                       Exec.Tasking.Manager
                       FractalStream.Models
                       Lang.Component
                       Lang.Expr
                       Lang.Expr.Print
                       Lang.Expr.Transform
                       Lang.Expr.Typing
                       Lang.Numbers
                       Lang.Parse.Expr
                       Lang.Planar
                       Utilities
                       Utils.Concurrent

                       UI

                       Actor
                       Actor.Viewer
                       Actor.Tool
                       Actor.Settings

                       Event

                       Language.Code
                       Language.Code.Simulator
                       Language.Type
                       Language.Value
                       Language.Value.Evaluator
                       Language.Value.Parser
                       Language.Effect
                       Language.Effect.Output
                       Language.Effect.Draw
                       Language.Effect.Render
                       Language.Effect.ThrowEvent

                       Data.Indexed.Functor

  build-depends:       base >=4.8 && <5,
                       random,
                       array,
                       async,
                       containers,
                       Earley,
                       parsec,
                       mtl,
                       recursion-schemes,
                       llvm-hs,
                       llvm-hs-pure,
                       time,
                       monad-parallel,
                       monad-par,
                       monad-par-extras,
                       bytestring,
                       vector,
                       first-class-families
  hs-source-dirs:      src

executable FractalStream
  import: FractalStream-common
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  other-modules:       UI.Tile
                       UI.WxWidgets
                       UI.WX.Viewer
  build-depends:       base >=4.8 && <5,
                       FractalStream,
                       random,
                       array,
                       wxcore,
                       wx,
                       async,
                       containers,
                       parsec,
                       mtl,
                       recursion-schemes,
                       llvm-hs,
                       llvm-hs-pure,
                       time,
                       monad-parallel,
                       monad-par,
                       monad-par-extras,
                       bytestring,
                       vector
  hs-source-dirs:      exe
  extra-lib-dirs:      /usr/local/lib

test-suite spec
  import: FractalStream-common
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:      base >=4.8 && <5, FractalStream, hspec
                    , first-class-families
  other-modules:      Data.Indexed.FunctorSpec
                    , Language.Value.EvaluatorSpec
                    , Language.Value.ParserSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*
