cabal-version:       3.0
name:                fractalstream-ui-wx
version:             2.0.0.0
synopsis:            Cross-platform WxWidgets UI for FractalStream
description:         Dynamical system visualization
license:             BSD-3-Clause
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           2021, Matt Noonan
category:            Math
build-type:          Custom

custom-setup
  setup-depends:
    base >=4.8 && <5, Cabal, cabal-macosx

common FractalStream-common
  ghc-options:         -Wall -Werror -O2
  -- This is basically the list of extensions from
  -- https://lexi-lambda.github.io/blog/2018/02/10/an-opinionated-guide-to-haskell-in-2018/
  -- with a few minor additions like ViewPatterns.
  -- I also switch on RecordWildCards because I like it: it lets you bring
  -- all fields of a record into scope, giving some of the flavor of an OOP
  -- language with member variables automatically in scope of object methods.
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DerivingStrategies
                     , EmptyCase
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , ViewPatterns
  default-language:    Haskell2010

executable FractalStream
  import: FractalStream-common
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  other-modules:       UI.Tile
                       UI.WxWidgets
                       UI.WX.Viewer
  build-depends:       base >=4.8 && <5,
                       fractalstream-core,
                       random,
                       array,
                       wxcore,
                       wx,
                       async,
                       containers,
                       --parsec,
                       mtl,
                       --recursion-schemes,
                       --llvm-hs,
                       --llvm-hs-pure,
                       time,
                       monad-parallel,
                       monad-par,
                       monad-par-extras,
                       bytestring,
                       vector,
                       first-class-families,
                       raw-strings-qq
  hs-source-dirs:      src
  extra-lib-dirs:      /usr/local/lib
